<resources>
    <string name="app_name">Morim</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_sign_in_now">Already have an account? sign in now</string>
    <string name="don_t_have_an_acccount_create_one_now">Don\'t have an acccount? create one now!</string>
    <string name="student_account">Student account</string>
    <string name="teacher_account">Teacher account</string>
    <string name="dismiss">Dismiss</string>
    <string name="MAPS_API_KEY">AIzaSyCwQrG5y3YMqi95pn2VRVkMK0dANGj3pcI</string>
    <string name="save">Save</string>
    <string name="select_teaching_areas">Select teaching areas</string>
    <string name="select_teaching_subjects">Select teaching subjects</string>
    <string name="select_teaching_city">Select teaching city</string>
    <string name="selected_city_none">Selected city: None</string>
    <string name="enter_education_details">Enter education details</string>
    <string name="login">Login</string>
    <string name="online_lesson">Online Lesson</string>
    <string name="zoom_skype_teacher">Zoom/Skype Teacher</string>
    <string name="my_meetings">My Meetings</string>
    <string name="teachers">Teachers</string>
    <string name="teachers_by_location">Teachers by location</string>
    <string name="teachers_near_me">Teachers near me</string>
    <string name="teacher_search">Teacher search</string>
    <string name="meetings">Meetings</string>
    <string name="near_me">Near me</string>
    <string name="move_to_current_location">Move to current location</string>
    <string name="rate_this_teacher">Rate this teacher</string>
    <string name="enter_hourly_price">Enter hourly price</string>
    <string name="hourly_fee_150">Hourly Fee: 150$</string>
</resources>