<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_marginVertical="32dp"
            android:layout_height="100dp"
            android:src="@drawable/icon"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etLayoutPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLoginSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <TextView
            android:id="@+id/btnToRegister"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/don_t_have_an_acccount_create_one_now"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>