<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTeacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:text="Teacher"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/sep"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/backBtn" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minWidth="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sep">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivTeacherItem"
            android:layout_width="100dp"
            android:layout_marginVertical="8dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/amu_bubble_mask"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvTeacherItemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="8dp"
                    android:text="Roni peretz"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:paddingEnd="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zoom_skype_teacher"
                    android:textAlignment="viewEnd"
                    android:textColor="#25A92A"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            android:translationY="-8dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvTeacherItemSubjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:text="Teaching Subjects" />

                <TextView
                    android:id="@+id/tvTeacherItemEducation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Education" />

                <RatingBar
                    android:id="@+id/rbTeacherItem"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="3"
                    android:scaleX="0.65"
                    android:scaleY="0.65"
                    android:stepSize="1.0"
                    android:transformPivotX="0dp"
                    android:transformPivotY="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_this_teacher"
                    android:id="@+id/rateThis"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">

            <Button
                android:id="@+id/btnSchedule"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:drawableEnd="@drawable/baseline_calendar_month_24"
                android:gravity="start|center"
                android:layoutDirection="rtl"
                android:minWidth="250dp"
                android:paddingHorizontal="20dp"
                android:text="Schedule with Roni Peretz"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                app:iconPadding="4dp"
                app:iconSize="20sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:text="@string/hourly_fee_150"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>